--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <!-- <link rel="stylesheet" href="/src/index"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&family=Quicksand:wght@300&family=Secular+One&family=Montserrat+Alternates:wght@100;800&family=Saira:wght@100&family=Ysabeau:wght@200&family=Roboto+Mono:wght@200&family=Share+Tech+Mono&family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omololu Jumat</title>
   </head>
@@ -13,3 +16,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
