feat: add my logo as shortcut icon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/vite.svg"
+      href="/my-logo.svg"
     />
     <!-- <link
       rel="shortcut icon"
@@ -19,7 +19,7 @@
     /> -->
     <link
       rel="apple-touch-icon"
-      href="/my-photo.jpg"
+      href="/my-logo.svg"
     />
     <!-- <link rel="stylesheet" href="/src/index"> -->
     <link
@@ -41,7 +41,7 @@
     />
     <meta
       name="description"
-      content="The newly redesigned version of my porfolio"
+      content="The newly redesigned version of my porfolio website"
     />
     <title>Omololu Jumat</title>
   </head>
